# contributing_tutorial

./: .gitignore  pyproject.toml  readme.md  workflow.ipynb
.github/workflows/: continuous-integration.yml
littlecv/: analyze_size.py  outputs.py  readimage.py  rgb2gray_lab.py  threshold_binary.py
littlecv/littlecv/: __init__.py  analyze_size.py  fill.py  outputs.py  plot_image.py  readimage.py  rgb2gray_lab.py  threshold_binary.py
tests/: test_littlecv.py
